--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
 <h2 id="title">Oh snap, an ember-cli index served from rails!</h2>
 
+{{#link-to 'things' tagName='button' class='btn btn-primary'}}Things{{/link-to}}
+
 {{outlet}}
